Remove sections from README.md
Removed the Getting Started and Future Ideas sections from the README.